jetty/kubernetes/gateway/nomulus-route-mosapi.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mosapi
spec:
  parentRefs:
  - kind: Gateway
    name: nomulus
    sectionName: https
  hostnames:
    - "mosapi.BASE_DOMAIN"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /check
    - path:
        type: PathPrefix
        value: /rdap
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: mosapi
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /check
      headers:
      - name: "canary"
        value: "true"
    - path:
        type: PathPrefix
        value: /rdap
      headers:
      - name: "canary"
        value: "true"
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: mosapi-canary
      port: 80
